* Transform has current "World" scope (Larry Diehl)
* Other Transforms can be reused by calling Transform with a string inside of another Transform definition (Larry Diehl)
* Execute "After" hooks in reverse order of declaration for better behavior with dependent blocks and to mimic the behavior of at_exit (David Waite)

=== Bugfixes
* Some options set in cucumber.yml profiles are ignored (#446 Leonard CHIN)
* Missing step_definition snippets not properly displayed (#433 Aslak Hellesøy)
* rspec-rails, :lib => false (#447 David Chelimsky)
* Cucumber with Spork breaks on OS X Snow Leopard (#431 David Chelimsky)

=== Changed Features
* Tag names passed on the command line *always* have to use the @ sign. --tags foo or --tags ~bar won't work. Use --tags @foo or --tags ~@bar (Aslak Hellesøy)

=== Removed features
* The Cucumber::Rails.bypass_rescue no longer exists. Errors will always bubble up, unless you use the new @allow_rescue tag. (Aslak Hellesøy)
* The Cucumber::Rails.use_transactional_fixtures no longer exists. Transactional fixtures are always enabled for the cucumber environment. (Aslak Hellesøy)

== 0.3.101 2009-09-15

Two exciting things in this release. Step Argument Transforms and a PDF formatter you can use to send
your features to your customer for review!

=== New Features
* New pdf formatter (#425 Mads Buus)
* Step Argument Transforms: These let you use the Transform method to register regular expressions
  to catch and transform/coerce arguments before they are yielded to step definitions:
  http://wiki.github.com/aslakhellesoy/cucumber/step-argument-transforms (Larry Diehl & Dave Astels)
* Adding webrat steps for asserting content does or does not exist within a particular element
  (using webrat's within method)  (Kieran Pilkington)

== 0.3.100 2009-09-09

The JavaZone release!

=== New Features
* Added support for Uzbek (msarvar)