@@ -8,4 +8,39 @@ Feature: Custom Formatter
       | 1           | 1                                    | 1     | 1     | 1    | 2            | 1           | 2             | 1           | 2      | 1    |
 
       """
-    
+  
+    Scenario: my own formatter
+      Given a standard Cucumber project directory structure
+      And a file named "features/f.feature" with:
+        """
+        Feature: i'll use my own
+          Scenario: just print me
+            Given this step works
+        """
+      And a file named "features/step_definitions/steps.rb" with:
+        """
+        Given /^this step works$/ do
+        end
+        """
+      And a file named "features/support/ze/formator.rb" with:
+        """
+        module Ze
+          class Formator < Cucumber::Ast::Visitor
+            def initialize(step_mother, io, options)
+              super(step_mother)
+              @io = io
+            end
+
+            def visit_scenario_name(keyword, name, file_colon_line, source_indent)
+              @io.puts "$ #{name.upcase}"
+            end
+          end
+        end
+        """
+      When I run cucumber features/f.feature --format Ze::Formator
+      Then STDERR should be empty
+      Then it should pass with
+        """
+        $ JUST PRINT ME
+
+        """
