@@ -47,6 +47,7 @@ module Cucumber
         step_mother.after_configuration(configuration)
         features = step_mother.load_plain_text_features(configuration.feature_files)
         step_mother.load_code_files(configuration.step_defs_to_load)
+
         enable_diffing
 
         visitor = configuration.build_formatter_broadcaster(step_mother)
